--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -196,5 +196,7 @@ article.error
     margin-top: 30px
     margin-bottom: 50px
   p
+    width: 470px
+    margin-left: 190px
     margin-top: 100px
 
