--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -190,13 +190,17 @@ a.cta span
 #main section.testimonials ul li p
   margin: 3px 0 0 0
 
-article.error
+
+/* 404 page */
+
+#main article.error
   text-align: center
   h2
+    font-size: 42px
+    letter-spacing: -.04em
     margin-top: 30px
-    margin-bottom: 50px
+    margin-bottom: 40px
   p
     width: 470px
     margin-left: 190px
-    margin-top: 100px
-
+    margin-top: 50px
