disabling sidebar bdc ad for now

--- a/app/views/shared/_sidebar_global_before.html.haml
+++ b/app/views/shared/_sidebar_global_before.html.haml
@@ -1,3 +1,3 @@
-/This code has a two week lifetime
-- if @site.class == SiteConfigs::Site && [:en, :"en-GB"].include?(I18n.locale)
-  = render 'shared/widget_ad_bdc'
+/This code has a two week lifetime, to be uncommented Tuesday, Sept 4
+/ - if @site.class == SiteConfigs::Site && [:en, :"en-GB"].include?(I18n.locale)
+/   = render 'shared/widget_ad_bdc'
