asset path correction

--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -14,7 +14,7 @@
         %div.clear
         %span
           = link_to('Read the Bible Now', bible_path, :class => 'cta')
-    %img.hero_shadow{:src => '/assets/section_shadow.png'}
+    %img.hero_shadow{:src => asset_path('section_shadow.png')}
     %ul
       %li.read_bible.first
         %div.pod_content
