Updated laptop img to jpg

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -23,7 +23,7 @@ p
   box-shadow: none
 
 #hero
-  background: image-url("laptop.png") no-repeat
+  background: image-url("laptop.jpg") no-repeat
   height: 535px
 
 #hero #hero_content
