--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -59,6 +59,11 @@ p
   border: 1px #607346 solid
   box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
   text-shadow: 0 -1px 0 #657C46
+  
+.cta:hover
+  background: #3787d6
+  border-color: #3787d6
+  color: #FFF
 
 .hero_shadow
   position: relative
