Fixed width problem with mobile

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -214,10 +214,14 @@ p
 
   #header
     width: 100%
+    padding: 0
+    border-radius: 0
     form, nav
       display: none
     #nav
       width: 40%
+    #yv_logo
+      margin-left: 20px
 
   #main
     float: none
