Fixed mobile width issue

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -11,6 +11,12 @@ p
   background: none
   position: relative
   width: 100%
+  
+#header
+  padding: 0px
+  
+#header a
+  margin-left: 20px
 
 #container.no_sidebar
   padding-left: 0px
@@ -324,3 +330,8 @@ p
 
   .flash_error
     width: auto
+    
+  .mobile-remove
+    display: none
+  .mobile-add
+    display: block
