more jon for gen action

--- a/app/views/versions/show.html.haml
+++ b/app/views/versions/show.html.haml
@@ -1,4 +1,4 @@
 %article
   %h1= @version
   .copyright!= @version.info
-  %p= link_to t("read this version"), bible_path(Reference.new("gen.1.#{@version.osis}"))
+  %p= link_to t("read this version"), bible_path(Reference.new("john.1.#{@version.osis}"))
