old_site_cta for bdc_home

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -11,13 +11,13 @@ p
   background: none
   position: relative
   width: 100%
-  
+
 #header
   padding: 0px
-  
+
   a#yv_logo
     margin-left: 20px
-  
+
   nav ul
     margin-right: 10px
 
@@ -67,7 +67,7 @@ p
       border: 1px #607346 solid
       box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
       text-shadow: 0 -1px 0 #657C46
-  
+
     .cta:hover
       background: #3787d6
       border-color: #3787d6
@@ -190,6 +190,20 @@ p
   h2
     margin-bottom: 10px
 
+.old_cta
+  padding: 20px 20px 15px 130px
+  border-radius: 10px
+  box-shadow: inset 0px 2px 4px rgba(#000, .12)
+  overflow: hidden
+  border: 1px solid #E5E4E2
+  border-bottom: 1px solid #FFF
+
+  p
+    width: 500px
+    float: left
+    margin-right: 50px
+    line-height: 1.3em
+
 #footer
   padding: 20px 10px
 
@@ -256,7 +270,7 @@ p
             width: 100%
             margin: 0 auto
             float: none
-          
+
           .cta:hover
             color: #fff
 
@@ -289,11 +303,11 @@ p
             width: 70%
           p span.narrow
             display: block
-          
+
         li.last
           margin-bottom: 0
         li.read_bible div
-          background: #F0EFED image-url("read_bible_icon_m.png") no-repeat 93% 20px 
+          background: #F0EFED image-url("read_bible_icon_m.png") no-repeat 93% 20px
         li.study_bible div
           background: #F0EFED image-url("highlight_bible_icon_m.png") no-repeat 93% 20px
         li.subscribe_bible div
@@ -313,8 +327,25 @@ p
         a
           width: 100%
           padding: 5px 0px
-          
+
       .bottom_cta
+        width: auto
+        padding: 0 20px
+        background-position: 20px 0
+        box-shadow: none
+        border: 0
+        h2, p
+          width: auto
+        h2
+          margin-left: 90px
+        p
+          margin: 0 0 0 90px
+        a
+          margin: 20px 0
+          width: 100%
+          padding: 5px 0px
+
+      .old_cta
         width: auto
         padding: 0 20px
         background-position: 20px 0
@@ -333,7 +364,7 @@ p
 
   .flash_error
     width: auto
-    
+
   .mobile-remove
     display: none
   .mobile-add
