--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -52,3 +52,7 @@
         Download the free YouVersion Bible App on your mobile device and you’ll have your Bible with you no matter where you go.
       %span
         = link_to('Download the Bible App', 'http://youversion.com/download')
+
+    %div.old_cta
+      %p
+        If you are looking for the Christ Unlimited Ministries content by Bud and Betty Miller or the old Bible.com website please visit their new website at <a href='http://www.bibleresources.org'>BibleResources.org</a>
