--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -191,17 +191,18 @@ p
     margin-bottom: 10px
 
 .old_cta
-  padding: 20px 20px 15px 130px
+  padding: 20px
   border-radius: 10px
-  box-shadow: inset 0px 2px 4px rgba(#000, .12)
+  box-shadow: inset 0px 2px 4px rgba(#666, .12)
   overflow: hidden
   border: 1px solid #E5E4E2
   border-bottom: 1px solid #FFF
+  margin-top: 30px
+
 
   p
-    width: 500px
-    float: left
-    margin-right: 50px
+    font-size: 12px
+    text-align: center
     line-height: 1.3em
 
 #footer
