--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -20,7 +20,7 @@
         %div.pod_content
           %h2 Read the Bible.
           %p
-            %span.narrow Take your choice from <strong>nearly 300 hundred Bible versions</strong> in <strong>more than 150 languages</strong>.
+            %span.narrow Take your choice from <strong>nearly 300 Bible versions</strong> in <strong>more than 150 languages</strong>.
           %p Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it.
       %li.study_bible
         %div.pod_content
