--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -16,16 +16,8 @@
           = link_to('Read the Bible Now', bible_path, :class => 'cta')
       %dev#hero_links
         %div{style: "height: 40px;"}
-          %div{id: "fb-root"}
-          :javascript
-            function(d, s, id) {
-              var js, fjs = d.getElementsByTagName(s)[0];
-              if (d.getElementById(id)) return;
-              js = d.createElement(s); js.id = id;
-              js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=#{Cfg.facebook_app_id}";
-              fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk');
-          %div.fb-like{'data-href' => "http://www.bible.com", 'data-send' => "false", 'data-layout' => "button_count", 'data-width' => "450", 'data-show-faces' => "true", 'data-font' => "arial"}
+          %script{:src => "http://connect.facebook.net/en_US/all.js#xfbml=1"}
+          %fb:like{:layout => "button_count", :show_faces => "false", :width => "450", font: "arial"}
 
         %div{style: "height: 40px;"}
           %g:plusone{size: "medium", href: "http://www.bible.com"}
