--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -73,6 +73,13 @@ p
       border-color: #3787d6
       color: #FFF
 
+  #hero_links
+    width: 250px
+    margin-left: 690px
+    div
+      float: left
+      margin-left: 20px
+
 .hero_shadow
   position: relative
   top: -1px
