Pod paragraph styling.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -120,6 +120,9 @@ p
     background: #f5f5f4
     box-shadow: inset 0px 2px 4px rgba(#000, .12)
 
+    p
+      display: inline
+
 #main article .explore_cta
   background: #3787d6
   padding: 20px 20px 10px 130px
