Styled social buttons (shudder)

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -75,7 +75,11 @@ p
 
   #hero_links
     width: 250px
-    margin-left: 690px
+    clear: right
+    overflow: hidden
+    float: right
+    padding-right: 100px
+    margin-top: 15px
     div
       float: left
       margin-left: 20px
