changed bud/betty copy style for bible.com intro page

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -194,13 +194,11 @@ p
     margin-bottom: 10px
 
 .old_cta
-  padding: 20px
-  border-radius: 10px
-  box-shadow: inset 0px 2px 4px rgba(#666, .12)
   overflow: hidden
-  border: 1px solid #E5E4E2
-  border-bottom: 1px solid #FFF
-  margin-top: 30px
+  width: 700px
+  margin: 30px auto 0px
+  font-style: italic
+  text-align: center
 
 
   p
