Fixed features copy spacing on mobile

--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -31,26 +31,26 @@
         %div.pod_content
           %h2 Read the Bible.
           %p
-            %span.narrow Take your choice from <strong>nearly 300 Bible versions</strong> in <strong>more than 150 languages</strong>.
-          %p Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it.
+            %span.narrow Take your choice from <strong>nearly 300 Bible versions</strong> in <strong>more than 150 languages</strong>. Compare two
+          %p versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it.
       %li.study_bible
         %div.pod_content
           %h2 Study the Bible.
           %p
-            %span.narrow <strong>Highlight</strong> in your favorite color, <strong>bookmark</strong> your favorite Bible verses, and make notes about what you’re learning.
-          %p Not only are you spending time in God’s Word, you’re building a history of your interaction with the Bible.
+            %span.narrow <strong>Highlight</strong> in your favorite color, <strong>bookmark</strong> your favorite Bible verses, and make notes about
+          %p  what you’re learning. Not only are you spending time in God’s Word, you’re building a history of your interaction with the Bible.
       %li.subscribe_bible
         %div.pod_content
           %h2 Subscribe to Bible Plans.
           %p
-            %span.narrow Cover the whole Bible, focus on a topic, or read a devotional from a gifted teacher.
-          %p Choose your plan and each day you’ll find a Bible selection waiting for you.
+            %span.narrow Cover the whole Bible, focus on a topic, or read a devotional from a gifted teacher. Choose your plan
+          %p and each day you’ll find a Bible selection waiting for you.
       %li.take_bible.last
         %div.pod_content
           %h2 Take the Bible with you.
           %p
-            %span.narrow You can also <a href="mobile">download</a> the Bible App for free on any mobile device.
-          %p When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be <strong>synced with Bible.com</strong>. You’ll have access to it all, no matter if you’re reading the Bible on your phone, tablet, or computer.
+            %span.narrow You can also <a href="mobile">download</a> the Bible App for free on any mobile device. When you use the mobile
+          %p app, your notes, bookmarks, highlights, plans, and more will be <strong>synced with Bible.com</strong>. You’ll have access to it all, no matter if you’re reading the Bible on your phone, tablet, or computer.
 
     %div.explore_cta
       %h1 Get started now.
