--- a/app/views/users/notes.html.haml
+++ b/app/views/users/notes.html.haml
@@ -6,6 +6,12 @@
   = render '/shared/widget_ad_bible_app'
 
 - content_for :user_main do
+  %dl.combo_button.float_right
+    %dt
+    %dd
+      = link_to t("notes.community notes"), all_notes_path
+    %dd.highlighted
+      = link_to t("notes.my notes"), user_notes_path(current_user)
   - if @notes.empty?
     %p= t('no notes found', username: @user.username)
   - else
