--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -36,7 +36,7 @@
 
 
 
-  
+
 .menu_arrow
   background: image-url("menu_arrow.png") no-repeat
   font-size: 0
@@ -77,7 +77,7 @@
 .dynamic_menu .scroll::-webkit-scrollbar-thumb:hover
   background: #ccc
 
-.dynamic_menu .scroll 
+.dynamic_menu .scroll
   font-size: 13px
 
 .dynamic_menu table,
@@ -208,6 +208,16 @@
     position: -99999px -99999px
   display: block
 
+#menu_chapter li.info a
+  background:
+    image: image-url("nav_icons_mobile.png")
+    repeat: no-repeat
+    position: 6px -129px
+  text-indent: 100%
+  white-space: nowrap
+  overflow: hidden
+
+
 #menu_chapter .li_active a
   background:
     color: rgba(#fff, 0.1)
@@ -312,21 +322,21 @@
 #menu_bookmark header ul.reference_tokens
   background: none
 
-#menu_bookmark header ul.reference_tokens > a 
+#menu_bookmark header ul.reference_tokens > a
   border: none !important
 
 #menu_bookmark header span
   font-weight: bold
-  margin: 0 0 5px 0 
+  margin: 0 0 5px 0
   display: block
 #menu_bookmark header .close
   top: 15px
 
 .dynamic_menu.version_select
   width: 415px
-  
+
 #menu_version td.audio a div
-  background: 
-    image: image-url("icon_listen.png") 
-    repeat: no-repeat 
+  background:
+    image: image-url("icon_listen.png")
+    repeat: no-repeat
     position: 100% -46px
