--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -1,4 +1,14 @@
 #menu_book_chapter.dynamic_menu
+  - version = {abbreviation: @version.abbreviation, id: @version.to_param }
+  - version[:books] = {}
+  - @version.books.each do |book_usfm, book_info|
+    - chapters = @version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm, canon: c.canonical }}
+    - version[:books][book_usfm] = {human: book_info.human, chapters: chapters }
+
+  %script
+    :plain
+      version_json = #{version.to_json.html_safe};
+
   .spinner_wrapper{style: "display: none;"}
     #book_chapter_spinner.dynamic_menu_spinner
   %span.menu_arrow
@@ -10,7 +20,7 @@
       %ul
         - @version.books.each do |book_usfm, book_info|
           %li
-            %a{:href => '#', "data-book" => book_usfm, "data-version" => @version.to_param, "data-abbrev" => @version.abbreviation, "data-chapters" => @version.books[book_usfm].chapters.map(&:human), "data-chapter-refs" => @version.books[book_usfm].chapters.map(&:usfm)}=  book_info.human
+            %a{:href => '#', "data-book" => book_usfm}=  book_info.human
   #menu_chapter
     %header
       =t("chapter")
