--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -254,14 +254,15 @@ p
       margin-left: 20px
 
   #main
-    float: none
-    width: auto
+    float: left
+    width: 100%
     margin: 0
 
     article
       position: relative
       min-height: auto
       padding: 0
+      overflow: hidden
 
       #hero
         background: none
@@ -292,10 +293,10 @@ p
             margin-bottom: 20px
             
         #hero_links
-          float: none
+          float: left
           padding-right: 0
           margin: 20px auto 0
-          width: 52%
+          overflow: hidden
           div:first-child
             margin-left: 0
 
