--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -1,14 +1,16 @@
-#menu_book_chapter.dynamic_menu
-  - version = {abbreviation: @version.abbreviation, id: @version.to_param }
-  - version[:books] = {}
-  - @version.books.each do |book_usfm, book_info|
-    - chapters = @version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm, canon: c.canonical }}
-    - version[:books][book_usfm] = {human: book_info.human, chapters: chapters }
+- version = {abbreviation: @version.abbreviation, id: @version.to_param }
+- version[:books] = {}
+- @version.books.each do |book_usfm, book_info|
+  - chapters = @version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm, canon: c.canonical }}
+  - version[:books][book_usfm] = {human: book_info.human, chapters: chapters }
 
-  %script
+/ Json representation of our version. Currently used for building our dynamic chapter grid menu.
+/ This will be cached along with the entire template
+%script
     :plain
       version_json = #{version.to_json.html_safe};
 
+#menu_book_chapter.dynamic_menu
   .spinner_wrapper{style: "display: none;"}
     #book_chapter_spinner.dynamic_menu_spinner
   %span.menu_arrow
