--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -25,3 +25,23 @@
   %p
     %b= link_to t("ref.about the version", version: @version), version_path(@version)
   %p= @reference.copyright
+
+
+- content_for :javascripts do
+  - fullscreen = (cookies[:full_screen] && cookies[:full_screen].to_i == 1) ? true : false;
+  %script
+    :plain
+
+      reader = new Reader({
+        version: "#{@reference[:version].to_s}",
+        abbrev: "#{@version.try(:abbreviation).upcase}",
+        reference: "#{@reference.to_param}",
+        book: "#{@reference[:book].to_s}",
+        book_api: "#{@reference[:book].sub(/[a-z]/) {|m| m.upcase}}",
+        book_human: "#{@version.books[@reference[:book]].human}",
+        chapter: "#{@reference[:chapter].to_s}",
+        font: "#{@font}",
+        size: "#{@size}",
+        full_screen: #{fullscreen},
+      });
+      reader.init();
