--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -187,7 +187,7 @@
 #menu_chapter
   float: right
 
-#menu_book .li_active a
+#menu_book .li_active a, #menu_book .li_active a:visited
   background: image-url("menu_book_highlighted_a.png") no-repeat right center
 
 #menu_chapter ol
@@ -295,6 +295,7 @@
 
 .dynamic_menu header .close
   right: 5px
+  cursor: pointer
 
 .dynamic_menu dd
   +box-shadow(inset #000 0 0 5px 0)
