--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -17,7 +17,7 @@
       %dd
         = link_to t("notes.my notes"), user_notes_path(current_user)
   - else
-    %h1= t("notes.community notes")
+    %h1= t("notes.list title")
   - unless @notes.empty?
     %ul.big_list
       = render partial: "list_item", collection: @notes, locals: {display: :avatar}
