JS. Getting closer.

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -314,10 +314,10 @@
 .dynamic_menu .open_modal
   text-decoration: none
 
-.dynamic_menu .open_modal dt
+.dynamic_menu #new_note_modal
   background: image-url("icon_open_modal.png") no-repeat 95% center #1f1f1f
 
-.dynamic_menu .open_modal dt:hover
+.dynamic_menu #new_note_modal:hover
   background: image-url("icon_open_modal.png") no-repeat 95% center #2e2e2e
 
 #menu_bookmark header ul.reference_tokens
