--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -201,4 +201,17 @@ a.cta span
     margin-top: 30px
     margin-bottom: 60px
   p
+    width: 470px
+    margin-left: 190px
     margin-top: 50px
+
+/* Versions#show */
+
+.copyright
+  h1, h2, h3, h4, h5, h6
+    // override heading styles, since some publishers
+    // have headings here where we don't want them
+    font-size: $text_size !important
+    font-family: $body_font
+    font-weight: normal
+    color: $body_text
