--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -17,7 +17,7 @@
         %a#clear_selected_verses.button{:href => '#', :title => 'Clear Selected Verses'}
           %span.icon_x
             = t('ref.clear verses')
-        %a#verses_selected_button.dynamic_menu_trigger.button{id:"menu_selected_trigger", href:"#menu_bookmark", title:t("ref.share")}
+        %a.dynamic_menu_trigger.button{id:"menu_selected_trigger", href:"#menu_bookmark", title:t("ref.share")}
           %b.icon_share
             =t("ref.selected")
             %sup#verses_selected_count
